information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.


Bugs fixed in 3.10.01
=====================
[1790286] All String preferences stored within the database are now restored


New Features for 3.10.01
========================


Changes to Existing Features in 3.10.01
======================================


Bugs fixed in 3.10
==================
[1757110] Toolbar now correctly disables images according to type of entry
selected and if URL is populated
[1758025, 1759364] '-s' option now works correctly
[] Window's position and size now updated correctly
[1768822] Manage->Options->Password History 'apply' works again.
[] Lock timeout after manual lock no longer saves empty database.
[1754566] State of tree view is now persistent across minimize, lock &
save.
[1771357] Timeout timer now reset in all dialog boxes - PasswordSafe
will no longer minimize in the middle of work with an open dialog box.
[1754054, 1754611, 1740704] Items are now fully sorted when "put groups first
in display tree" selected.
[1757298, 1774428, 1609474] Merge no longer loses data
[] Ensure group/title/user combination is unique during text import.
[] During Add/Edit, fields containing only whitespace characters (space,
horzontal tab, vertical tab, carriage return, new line and form feed) are
considered empty fields.
[1751465] Fields containing only whitespace or whitespace between double quotes
are now treated as empty during plain text import.
[1783905] Read-only status maintained after unlocking a database.
[1782407] Export to text file now includes "title", if selected.
[1734220] XML Export line of Notes fields containing CRLF now works correctly.
The default delimeter has been made the same as for Export to a Text file
[1632634] Compare no longer changes database settings when the databases are
identical.

New Features for 3.10
=====================